feat: Implement password reset and registration, enhance essay evaluation with new AI feedback, and refactor home components