@@ -13,6 +13,7 @@ import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Collections;
+import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any; 
 import static org.mockito.ArgumentMatchers.eq; 
@@ -32,7 +33,7 @@ class RedacaoServiceTest {
     @InjectMocks
     private RedacaoService redacaoService;
 
-    private final String MOCK_JSON_IA = "{\"pontuacao_total\":920,\"feedback_geral\":\"Excelente redacao...\",\"detalhamento_competencias\":[]}";
+    private final String MOCK_JSON_IA = "{\"pontuacao_total\":920,\"feedback_geral\":\"Excelente redacao...\",\"detalhamento_competencias\":[],\"pontos_fortes\":[\"Forte 1\"],\"pontos_melhoria\":[\"Melhoria 1\"]}";
    
    
     @Test
@@ -41,10 +42,10 @@ class RedacaoServiceTest {
         String conteudo = "Minha redação para o teste.";
         String userId = "user123";
 
-        Redacao redacaoSalvaInicialmente = new Redacao(userId, conteudo, "PENDENTE", null, null, null);
+        Redacao redacaoSalvaInicialmente = new Redacao(userId, conteudo, "Titulo Teste", "Tema Teste", "PENDENTE", null, null, null, null, null);
         redacaoSalvaInicialmente.setId("ID_FICTICIO"); 
         
-        AvaliacaoResultadoDTO resultadoSimulado = new AvaliacaoResultadoDTO(920, "Excelente redacao...", Collections.emptyList());
+        AvaliacaoResultadoDTO resultadoSimulado = new AvaliacaoResultadoDTO(920, "Excelente redacao...", Collections.emptyList(), List.of("Forte 1"), List.of("Melhoria 1"));
 
        
         Mockito.when(redacaoRepository.save(any(Redacao.class)))
@@ -64,10 +65,12 @@ class RedacaoServiceTest {
         Mockito.when(redacaoRepository.save(Mockito.argThat(r -> r.getStatus().equals("CORRIGIDA"))))
                .thenReturn(redacaoSalvaInicialmente); 
 
-        Redacao resultadoFinal = redacaoService.processarEavaliarRedacao(conteudo, userId);
+        Redacao resultadoFinal = redacaoService.processarEavaliarRedacao(conteudo, userId, "Titulo Teste", "Tema Teste");
 
         assertEquals("CORRIGIDA", resultadoFinal.getStatus(), "O status deve ser 'CORRIGIDA'");
         assertEquals(920, resultadoFinal.getPontuacaoTotal(), "A pontuação deve ser a do DTO simulado");
+        assertEquals(List.of("Forte 1"), resultadoFinal.getPontosFortes(), "Pontos fortes devem coincidir");
+        assertEquals(List.of("Melhoria 1"), resultadoFinal.getPontosMelhoria(), "Pontos de melhoria devem coincidir");
         
         Mockito.verify(objectMapper, Mockito.times(1)).readValue(
             any(String.class), 
@@ -84,7 +87,7 @@ class RedacaoServiceTest {
         String userId = "user123";
 
         Exception exception = assertThrows(IllegalArgumentException.class, () -> {
-            redacaoService.processarEavaliarRedacao(conteudo, userId);
+            redacaoService.processarEavaliarRedacao(conteudo, userId, "Titulo", "Tema");
         });
 
         assertTrue(exception.getMessage().contains("Conteúdo da redação não pode ser vazio"));
